# inputsim

./: CMakeLists.txt  README.md
include/inputsim/: inputsim.h  keyboard.h  mouse.h
src/: export.h  inputsim.c  key.h  keyboard.c  keyboardimpl.h  mouse.c  mouseimpl.h  mysleep.h
src/linux/: linuxkeyboard.c  linuxmouse.c  uinputhelper.c  uinputhelper.h
src/windows/: windowskeyboard.c  windowsmouse.c
